# gat-cli

./: .dockerignore  .flake8  Dockerfile  LICENSE  README.md  gat-cli.py  pyproject.toml
gat/: __init__.py  client.py  data.py
